@@ -1,4 +1,5 @@
 Nov 07 2002  2.7.1  Various errno cleanups throughout the source
+                    Updated beacon logging to log beacons with new SSIDs
 Nov 06 2002  2.7.1  Fixed timestamp and capture-level noise packet reporting
                      for wsp100
                     Fixed panelfront packet type dumps
